--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "grunt-contrib-pug": "^1.0.0",
     "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0",
+    "grunt-csscomb": "^3.1.1",
     "grunt-sass-globbing": "^1.5.1"
   },
   "dependencies": {
